feat(Layout): rearrange home page elements

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,14 @@
   * {
     @apply box-border;
   }
+
+  h1 {
+    @apply text-2xl;
+  }
+
+  h2 {
+    @apply text-xl;
+  }
 }
 
 @layer utilities {
