--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,13 @@
 @tailwind utilities;
 
 @layer base {
+  #__next {
+    @apply h-full;
+  }
+
   html,
   body {
-    @apply m-0 p-0 font-sans;
+    @apply m-0 h-full p-0 font-sans;
   }
 
   * {
